# zero_link

./: .gitignore  AGENTS.md  Cargo.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/adapters/: README.md
benchmarks/results/: .gitignore
benchmarks/runners/: run_all.sh  run_one.sh  run_sweep_zerolink_daemon.sh
benchmarks/scenarios/: p2p_large.json  p2p_small.json  p2p_xlarge.json
benchmarks/scripts/: render_compare_markdown.py  run_benchmark.py  summarize.py  sweep_zerolink_daemon.py
bindings/: README.md
bindings/c/include/: zerolink_connector.h
bindings/csharp/: README.md
bindings/csharp/samples/ConsolePubSub/: ConsolePubSub.csproj  Program.cs
bindings/csharp/smoke/ZerolinkSmoke/: Program.cs
bindings/csharp/src/Zerolink/: Zerolink.csproj  ZerolinkClient.cs  ZerolinkExceptions.cs  ZerolinkSchemas.cs
bindings/csharp/src/Zerolink/Native/: NativeMethods.cs  NativeTypes.cs
bindings/csharp/tests/ZerolinkSchemaSmoke/: Program.cs
bindings/node/: README.md
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: cross_lang_smoke.py  daemon_demo.py  pubsub.py  scalars_demo.py
bindings/python/src/zerolink/: __init__.py  _native.py  client.py  schemas.py
bindings/python/tests/: test_schemas.py  test_smoke.py
crates/connectord/: Cargo.toml
crates/connectord/src/: main.rs
crates/zl-cli/: Cargo.toml
crates/zl-cli/src/: main.rs
crates/zl-ffi/: Cargo.toml
crates/zl-ffi/src/: lib.rs
crates/zl-ipc/: Cargo.toml
crates/zl-ipc/src/: lib.rs
crates/zl-metrics/: Cargo.toml
crates/zl-metrics/src/: lib.rs
crates/zl-proto/: Cargo.toml
crates/zl-proto/src/: lib.rs
crates/zl-router/: Cargo.toml
crates/zl-router/src/: lib.rs
crates/zl-shm/: Cargo.toml
crates/zl-shm/src/: lib.rs
docs/: architecture_connector_mvp.md  requirements_connector.md
docs/ffi/: zerolink_connector.h
docs/schemas/: README.md  bytes_with_mime_json_v1.md  image_frame_v1.md  scalars_v1.md
scripts/bindings/: build_native.ps1  build_native.sh  python_dev_setup.sh
