[project]
name = "zerolink"
version = "0.1.0"
description = "ZeroLink Python binding"
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
