[package]
name = "connectord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zl-router = { path = "../zl-router" }
zl-proto = { path = "../zl-proto" }
zl-ipc = { path = "../zl-ipc" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
] }
