[package]
name = "connectord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
zl-router = { path = "../zl-router" }
zl-proto = { path = "../zl-proto" }
zl-ipc = { path = "../zl-ipc" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
] }
