[package]
name = "zl-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
zl-proto = { path = "../zl-proto" }
zl-router = { path = "../zl-router" }
zl-ipc = { path = "../zl-ipc" }
