[package]
name = "zl-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
zl-proto = { path = "../zl-proto" }
zl-router = { path = "../zl-router" }
zl-ipc = { path = "../zl-ipc" }
zl-shm = { path = "../zl-shm" }
